# mimic_grasping_plugin_generator

./: .gitignore  CMakeLists.txt  README.md
include/6d_mimic_client/: interface_6dmimic.h
include/6d_mimic_interface/: 6d_mimic_interface.h
install_configurations/: 6dmimic_interface.pc.in  interface_6dmimic.pc.in
src/6d_mimic_client/: interface_6dmimic.cpp
src/6d_mimic_interface/: 6d_mimic_interface.cpp
src/examples/: 6dmimic_interface_node.cpp  interface_6dmimic_node.cpp
